[gd_scene load_steps=9 format=3 uid="uid://b8ec0yxtxcf7m"]

[ext_resource type="Script" uid="uid://7gi847m676j0" path="res://scenes/game_scene.gd" id="1_onqr8"]
[ext_resource type="PackedScene" uid="uid://boxjjraa7skxm" path="res://ui/card_container.tscn" id="2_ycayy"]
[ext_resource type="Texture2D" uid="uid://cdn55de6hqtk7" path="res://ui/deck.png" id="3_ycayy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycayy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bw6k5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk2rg"]
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycayy"]
bg_color = Color(0, 0, 0, 0.352941)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5spy"]

[node name="GameScene" type="Node"]
script = ExtResource("1_onqr8")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SegmentSplitter" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="ColorRect" parent="UI/SegmentSplitter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/SegmentSplitter"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="OpponentCards" type="Control" parent="UI/SegmentSplitter/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TotalDisplay" type="Label" parent="UI/SegmentSplitter/VBoxContainer2/OpponentCards"]
offset_top = 100.0
offset_right = 320.0
offset_bottom = 116.0
text = "Total: 0"
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/SegmentSplitter/VBoxContainer2/OpponentCards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 40

[node name="CardContainer" parent="UI/SegmentSplitter/VBoxContainer2/OpponentCards/MarginContainer" instance=ExtResource("2_ycayy")]
layout_mode = 2

[node name="Center" type="Control" parent="UI/SegmentSplitter/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/SegmentSplitter/VBoxContainer2/Center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/SegmentSplitter/VBoxContainer2/Center/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="UI/SegmentSplitter/VBoxContainer2/Center/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerCards" type="Control" parent="UI/SegmentSplitter/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TotalDisplay" type="Label" parent="UI/SegmentSplitter/VBoxContainer2/PlayerCards"]
layout_mode = 2
offset_right = 320.0
offset_bottom = 16.0
text = "Total: 0"

[node name="MarginContainer" type="MarginContainer" parent="UI/SegmentSplitter/VBoxContainer2/PlayerCards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="CardContainer" parent="UI/SegmentSplitter/VBoxContainer2/PlayerCards/MarginContainer" instance=ExtResource("2_ycayy")]
layout_mode = 2

[node name="RightSide" type="HBoxContainer" parent="UI/SegmentSplitter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SegmentSplitter/RightSide"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="UI/SegmentSplitter/RightSide/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Deck" type="Control" parent="UI/SegmentSplitter/RightSide/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="UI/SegmentSplitter/RightSide/VBoxContainer/Deck"]
clip_children = 2
position = Vector2(50, 58.5)
texture = ExtResource("3_ycayy")

[node name="Button" type="Button" parent="UI/SegmentSplitter/RightSide/VBoxContainer/Deck/Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -33.0
offset_right = -20.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ycayy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bw6k5")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_kk2rg")
theme_override_styles/hover = SubResource("StyleBoxFlat_ycayy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kk2rg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b5spy")

[node name="Button" type="Button" parent="UI/SegmentSplitter/RightSide/VBoxContainer/Deck"]
layout_mode = 0
offset_left = 33.0
offset_top = 96.0
offset_right = 67.0
offset_bottom = 120.0
text = "Hold"

[node name="Control3" type="Control" parent="UI/SegmentSplitter/RightSide/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CheatMeterMargin" type="MarginContainer" parent="UI/SegmentSplitter/RightSide"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 50

[node name="ProgressBar" type="ProgressBar" parent="UI/SegmentSplitter/RightSide/CheatMeterMargin"]
layout_mode = 2
size_flags_vertical = 1
fill_mode = 3
show_percentage = false

[connection signal="pressed" from="UI/SegmentSplitter/RightSide/VBoxContainer/Deck/Sprite2D/Button" to="." method="draw_player_card"]
[connection signal="pressed" from="UI/SegmentSplitter/RightSide/VBoxContainer/Deck/Button" to="." method="player_hold"]
